Modify header, sidebar, router

--- a/Develompent/Frontend/src/assets/_components.scss
+++ b/Develompent/Frontend/src/assets/_components.scss
@@ -12,3 +12,4 @@
 @import "components/Scrollable/base";
 @import "components/NavigationMenus/NavigationMenusVerticalBasic/base";
 
+@import "customs/lsidebar";
