--- a/Develompent/Frontend/src/assets/landingpage.css
+++ b/Develompent/Frontend/src/assets/landingpage.css
@@ -77,7 +77,7 @@ body {
 }
 
 .share-knowledge {
-    height: 600px;
+    /* height: 600px; */
     width: 100%;
     background-color: #F1F8FE;
 }
@@ -92,6 +92,7 @@ body {
     height: 500px;
     width: 100%;
     background-color: white;
+    align-items: center;
 }
 
 .featured-mentors {
@@ -104,4 +105,66 @@ body {
     height: 500px;
     width: 100%;
     background-color: #F1F8FE;
+}
+
+.img-share-knowledge {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.img-mentor-active {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 60%;
+    /* height: 100%; */
+}
+
+.share-knowledge-desc {
+    padding-top: 20%;
+    padding-left: 20%;
+    align-items: center;
+}
+
+.share-knowledge-desc h5{
+    /* font-family: "Nunito Sans"; */
+    line-height: 30px;
+    color: #333333;
+}
+
+.btn-find-mentor {
+    width: 146px;
+    height: 50px;
+    font-size: 16px !important;
+    font-weight: bold;
+    background-color: #04B5FA !important;
+    border: #04B5FA !important;
+}
+
+.desc-title {
+    padding-top: 50px;
+    font-weight: bold;
+    font-size: 60px;
+    /* font-family: "Nunito Sans"; */
+    line-height: 65px;
+    color: #333333;
+}
+
+.desc-title-works {
+    padding-top: 50px;
+    font-weight: bold;
+    font-size: 40px;
+    /* font-family: "Nunito Sans"; */
+    line-height: 65px;
+    color: #333333;
+}
+
+.center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.img-brains-works {
+    padding: 10px 50px 10px 50px;
 }
