--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -20,7 +20,6 @@ body {
     border: solid #ACACAC !important;
     border-radius: 5px !important;
     border-width: 1px !important;
-    
     margin-top: 5px;
     height: 48px !important;
     font-size: 18px !important;
@@ -31,11 +30,12 @@ body {
     min-width: 400px !important;
 }
 
-.material-icons {
+
+/* .material-icons {
     font-size: 30px !important;
     font-weight: 10 !important;
     height: 48px !important;
-}
+} */
 
 .input-group-text {
     padding: 0px 0px 0px 5px !important;
@@ -77,7 +77,7 @@ body {
 }
 
 .share-knowledge {
-    /* height: 600px; */
+    height: 600px;
     width: 100%;
     background-color: #F1F8FE;
 }
@@ -92,7 +92,6 @@ body {
     height: 500px;
     width: 100%;
     background-color: white;
-    align-items: center;
 }
 
 .featured-mentors {
@@ -107,64 +106,271 @@ body {
     background-color: #F1F8FE;
 }
 
-.img-share-knowledge {
+
+/* fallback */
+
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialicons/v55/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+}
+
+
+/* fallback */
+
+@font-face {
+    font-family: 'Material Icons Outlined';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v25/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+}
+
+
+/* fallback */
+
+@font-face {
+    font-family: 'Material Icons Round';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialiconsround/v24/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmP.woff2) format('woff2');
+}
+
+
+/* fallback */
+
+@font-face {
+    font-family: 'Material Icons Sharp';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialiconssharp/v25/oPWQ_lt5nv4pWNJpghLP75WiFR4kLh3kvmvR.woff2) format('woff2');
+}
+
+
+/* fallback */
+
+@font-face {
+    font-family: 'Material Icons Two Tone';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialiconstwotone/v23/hESh6WRmNCxEqUmNyh3JDeGxjVVyMg4tHGctNCu0.woff2) format('woff2');
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
+
+.material-icons-outlined {
+    font-family: 'Material Icons Outlined';
+    font-weight: lighter;
+    font-style: normal;
+    font-size: 30px !important;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
+
+.material-icons-round {
+    font-family: 'Material Icons Round';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
+
+.material-icons-sharp {
+    font-family: 'Material Icons Sharp';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
+
+.material-icons-two-tone {
+    font-family: 'Material Icons Two Tone';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
+
+.sidebar-item-font {
+    font-size: 16px;
+}
+
+.p-0 {
+    border-bottom: none !important;
+}
+
+.badge {
+    position: absolute;
+    padding: .25rem .375rem;
+    font-size: .5rem;
+    left: 50%;
+    top: 10% !important;
+}
+
+.badge-danger {
+    color: #04B5FA;
+    background-color: #04B5FA;
+}
+
+.user-type-active {
+    height: 100%;
+    display: flex;
+    margin-left: 0px;
+    margin-right: 0px;
+    justify-content: center;
     align-items: center;
+    align-content: center;
+    font-size: 15px;
+    padding: 20px;
+    border-radius: 7px;
+    color: #ffffff;
+    border: 10px solid #04B5FA;
+    background-color: #04B5FA;
+}
+
+.user-type-deactive {
+    height: 100%;
+    font-size: 15px;
     display: flex;
     justify-content: center;
-}
-
-.img-mentor-active {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    width: 60%;
-    /* height: 100%; */
-}
-
-.share-knowledge-desc {
-    padding-top: 20%;
-    padding-left: 20%;
     align-items: center;
+    align-content: center;
+    padding: 20px;
 }
 
-.share-knowledge-desc h5{
-    /* font-family: "Nunito Sans"; */
-    line-height: 30px;
-    color: #333333;
-}
-
-.btn-find-mentor {
-    width: 146px;
-    height: 50px;
-    font-size: 16px !important;
-    font-weight: bold;
-    background-color: #04B5FA !important;
-    border: #04B5FA !important;
-}
-
-.desc-title {
-    padding-top: 50px;
-    font-weight: bold;
-    font-size: 60px;
-    /* font-family: "Nunito Sans"; */
-    line-height: 65px;
-    color: #333333;
-}
-
-.desc-title-works {
-    padding-top: 50px;
-    font-weight: bold;
-    font-size: 40px;
-    /* font-family: "Nunito Sans"; */
-    line-height: 65px;
-    color: #333333;
-}
-
-.center {
+.user-type-group {
+    border: 2px solid #ACACAC;
+    border-radius: 10px;
     align-items: center;
-    display: flex;
     justify-content: center;
+    height: 90%;
 }
 
-.img-brains-works {
-    padding: 10px 50px 10px 50px;
+.main-sidebar .nav .nav-item .nav-link.active, .main-sidebar .nav .nav-item .nav-link:hover, .main-sidebar .nav .nav-item.active, .main-sidebar .nav .nav-item:hover {
+    background-color: #04B5FA;
+    color: #FFFFFF;
+    stroke: white !important;
+    box-shadow: none;
+}
+
+.main-sidebar .nav .nav-item .nav-link.active i, .main-sidebar .nav .nav-item .nav-link:hover i, .main-sidebar .nav .nav-item.active i, .main-sidebar .nav .nav-item:hover i {
+    color: #FFFFFF;
+}
+
+.main-navbar {
+    height: 94px;
+    padding-top: 20px;
+    padding-left: 0px;
+}
+
+.main-sidebar-class {
+    /* width: 14% !important; */
+    min-width: 260px;
+}
+
+.main-content-class {
+    /* width: 86% !important; */
+    /* margin-left: 14%; */
+}
+
+.main-sidebar-item-icon-class svg{
+    stroke: #999999;
+    margin-bottom: 6px;
+}
+
+.main-sidebar-item-icon-class:hover svg{
+    stroke: white;
+}
+
+.main-sidebar-item-icon-class.active svg{
+    stroke: white;
+}
+
+.main-sidebar-item-icon-class div {
+    padding-right: 10px;
+}
+
+@media (max-width: 1579px) and (min-width: 992px) {
+    .main-content-class {
+        margin-left: 260px;
+        width: calc(100% - 260px) !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .sidebar-main-navbar-class {
+        display: none !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .sidebar-main-navbar-class .main-navbar {
+        padding-top: 0px !important;
+    }
+}
+
+@media (max-width: 991px) {
+    .main-sidebar-class {
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
+        box-shadow: none;
+    }
+    .main-sidebar-class.open {
+        width: 100%;
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        box-shadow: 0 0.125rem 9.375rem rgba(90,97,105,.1), 0 0.25rem 0.5rem rgba(90,97,105,.12), 0 0.9375rem 1.375rem rgba(90,97,105,.1), 0 0.4375rem 2.1875rem rgba(165,182,201,.1);
+    }
+}
+
+@media (min-width: 1580px) {
+    .main-content-class {
+        margin-left: 16.6666667%;
+        width: 83.3333333 !important;
+    }
 }
