--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -104,7 +104,10 @@ body {
 }
 
 .discover {
-    height: 910px;
+    /* height: 910px; */
+    /* padding-left: 40px; */
+    /* padding-right: 40px; */
+    padding-top: 60px;
     width: 100%;
     background-color: #F1F8FE;
 }
@@ -453,6 +456,113 @@ body {
 
 .brains-works-part {
     width: 500px;
+}
+
+.desc-title-discover {
+    padding-top: 10px;
+    /* padding-bottom: 10px; */
+    font-weight: bold;
+    font-size: 30px;
+    /* font-family: "Nunito Sans"; */
+    line-height: 40px;
+    color: #333333;
+}
+
+.discover-tag {
+    height: 25px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #04B5FA;
+    background-color: #D9F2FE;
+    border-radius: 100px;
+    padding: 0px 10px;
+    margin-right: 10px;
+}
+
+.discover-detail-content {
+    font-size: 16px;
+    color: #333333;
+    max-width: 300px;
+}
+
+.img-discover-detail-content {
+    width: 80%;
+    padding-bottom: 20px;
+}
+
+.img-discover-detail-content-avatar {
+    width: 36px;
+    height: 36px;
+    margin-right: 20px;
+    /* border-radius: 10px; */
+}
+
+.btn-learn-more {
+    width: 146px;
+    height: 50px;
+    font-size: 16px !important;
+    font-weight: bold;
+    background-color: #04B5FA !important;
+    border: #04B5FA !important;
+    margin-top: 50px;
+}
+
+.discover-part { 
+    width: 33%;
+    margin: 0px 0px !important;
+    padding-bottom: 70px;
+    padding-top: 70px;
+    padding-left: 6%;
+    min-width: 300px;
+}
+
+.border-top-bottom {
+    border-bottom: 1px solid #CDD3D8;
+    border-top: 1px solid #CDD3D8;
+}
+
+.border-left-right {
+    border-right: 1px solid #CDD3D8;
+    border-left: 1px solid #CDD3D8;
+}
+
+.external-site-icon {
+    justify-content: right;
+}
+
+.footer-icon {
+    padding: 0px 10px;
+}
+
+.main-footer {
+    height: 146px !important;
+}
+
+.footer-link {
+    font-size: 15px;
+    color: #333333;
+}
+
+.footer-logo {
+    padding: 0px 20px;
+}
+
+.desc-content-discover {
+    padding-bottom: 30px;
+    font-size: 20px;
+    /* font-family: "Nunito Sans"; */
+    line-height: 25px;
+    color: #333333;
+}
+
+.desc-title-discover {
+    padding-top: 10px;
+    /* padding-bottom: 10px; */
+    font-weight: bold;
+    font-size: 30px;
+    /* font-family: "Nunito Sans"; */
+    line-height: 40px;
+    color: #333333;
 }
 
 @media (max-width: 1250px) {
