Update featured mentors padding

--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -193,6 +193,7 @@ body {
 
 .carousel-component-body-header-class-name {
     padding-right: 20px;
+    padding-left: 10px;
 }
 
 .carousel-component-body-teach-class {
