--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -14,6 +14,7 @@ body {
 
 .logo-image {
     margin-right: 60px;
+    margin-left: 30px;
 }
 
 .navbar-search {
@@ -30,12 +31,6 @@ body {
     width: 85% !important;
     min-width: 300px !important;
     max-width: 500px;
-}
-
-.material-icons {
-    font-size: 30px !important;
-    font-weight: 10 !important;
-    height: 50px !important;
 }
 
 .input-group-text {
@@ -393,7 +388,7 @@ body {
     outline-color: #04B5FA;
 }
 
-.dropdown-toggle {
+.btn-dropdown-toogle {
     height: 48px;
     font-size: 16px !important;
     padding: 13px 21.5px !important;
@@ -402,11 +397,11 @@ body {
     margin-top: 5px;
 }
 
-.dropdown-item {
+.btn-dropdown-item {
     font-size: 16px !important;
 }
 
-.dropdown-item:active {
+.btn-dropdown-item:active {
     border: none !important;
     outline: none !important;
 }
