--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -133,7 +133,7 @@ body {
 
 .sidebar-item-font {
     font-size: 16px;
-    color: #999999 !important;
+    /* color: #999999 !important; */
 }
 
 .p-0 {
@@ -544,4 +544,10 @@ body {
 
 .main-content>.main-content-container.container-fluid {
     min-height: calc(100vh - 9.9rem);
+}
+
+.main-sidebar .nav .nav-item .nav-link {
+    font-weight: 400;
+    color: #999999;
+    padding: .9375rem 1.5625rem;
 }
