Sign In and Sign up Page.

--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -323,6 +323,7 @@ body {
     display: flex;
     justify-content: center;
     padding: 0;
+    opacity: 0;
 }
 
 .img-mentor-active {
@@ -336,6 +337,7 @@ body {
     padding-top: 10%;
     padding-left: 20%;
     align-items: center;
+    opacity: 0;
 }
 
 .awssld__content {
@@ -696,7 +698,59 @@ body {
 }
 
 .animation-class {
+}
+
+.dis-none {
+    opacity: 0;
+}
+
+.animation-class .animation-one-class {
     animation-name: 'anialpha';
+    animation-duration: 1000ms;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+}
+
+.animation-class .animation-two-class {
+    animation-name: 'anialpha';
+    animation-duration: 500ms;
+    animation-delay: 1000ms;
+    animation-fill-mode: forwards;
+}
+
+.animation-class .animation-three-class {
+    animation-name: 'anialpha';
+    animation-duration: 1000ms;
+    animation-delay: 1500ms;
+    animation-fill-mode: forwards;
+}
+
+.animation-class .animation-four-class {
+    animation-name: 'anialpha';
+    animation-duration: 500ms;
+    animation-delay: 2500ms;
+    animation-fill-mode: forwards;
+}
+
+.animation-class .animation-five-class {
+    animation-name: 'anialpha';
+    animation-duration: 1000ms;
+    animation-delay: 3000ms;
+    animation-fill-mode: forwards;
+}
+
+.animation-class .share-animation-ltor {
+    animation-name: 'ltor';
+    animation-delay: 1000ms;
+    animation-duration: 2000ms;
+    animation-fill-mode: forwards;
+}
+
+.animation-class .share-animation-rtol {
+    animation-name: 'rtol';
+    animation-delay: 0ms;
+    animation-duration: 3000ms;
+    animation-fill-mode: forwards;
 }
 
 .ltor {
@@ -717,13 +771,13 @@ body {
 }
 
 @keyframes ltor {
-    from {transform:translateX(-500px);}
-    to {transform:translateX(0px);}
+    from {transform:translateX(-500px);opacity: 1;}
+    to {transform:translateX(0px);opacity: 1;}
 }
 
 @keyframes rtol {
-    from {transform:translateX(1500px);}
-    to {transform:translateX(0px);}
+    from {transform:translateX(1500px);opacity: 1;}
+    to {transform:translateX(0px);opacity: 1;}
 }
 
 @keyframes bigger {
@@ -734,4 +788,234 @@ body {
 .awssld__timer {
     opacity: 0;
     pointer-events: none; /* prevent events (mouse clicking etc.) */
+}
+
+.modal-content-class {
+    align-items: center;
+    justify-content: center;
+    display: block;
+    padding: 0px !important;
+    width: 65%;
+}
+
+.modal-class {
+    height: 100%;
+    margin: auto !important;
+    display: flex;
+}
+
+.modal-class .modal-content {
+    min-height: 50%;
+    margin: auto;
+    align-items: center;
+}
+
+.content-center {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.full-width-class {
+    width: 100%;
+}
+
+.middle-width-class {
+    width: 50%;
+}
+
+.block-content-class {
+    display: block;
+}
+
+.modal-header-class {
+    margin: 40px 0px;
+    font-size: 25px !important;
+    line-height: 25px;
+    font-weight: 700;
+    color: #333333;
+}
+
+.modal-input-group-class {
+}
+
+.modal-input-group-class label {
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 4px;
+}
+
+.modal-input-group-class input {
+    font-size: 16px;
+    line-height: 30px;
+    color: #999999;
+    border: 1px solid #E3E3E3;
+    font-weight: 400;
+    box-shadow: none;
+    margin-bottom: 20px;
+}
+
+.modal-input-group-class input:hover {
+    box-shadow: none;
+    border: 1px solid #E3E3E3 !important;
+}
+
+.modal-input-group-class input:focus {
+    box-shadow: none;
+    border: 1px solid #E3E3E3 !important;
+}
+
+.modal-input-group-class input:active {
+    box-shadow: none;
+    border: 1px solid #E3E3E3 !important;
+}
+
+.forgot-class {
+    float: right;
+}
+
+.button-text-group-class {
+    align-items: center;
+    justify-content: center;
+}
+
+.hidden-underline {
+    text-decoration: none;
+}
+
+.hidden-underline:hover {
+    text-decoration: none;
+}
+
+.button-text-group-class button {
+    margin: 10px;
+    display: flex;
+    margin: auto;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #04B5FA;
+    border-color: #04B5FA;
+    padding: 15px 50px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button-text-group-class button:hover {
+    margin: 10px;
+    display: flex;
+    margin: auto;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #04B5FA;
+    border-color: #04B5FA;
+    box-shadow: none;
+    padding: 15px 50px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button-text-group-class button:active {
+    margin: 10px;
+    display: flex;
+    margin: auto;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #04B5FA !important;
+    border-color: #04B5FA !important;
+    box-shadow: none;
+    padding: 15px 50px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button-text-group-class p {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    font-weight: 400;
+}
+
+.button-text-group-class a {
+    font-size: 14px;
+    font-weight: 500;
+    color: #333333;
+}
+
+.button-text-group-class a:hover {
+    font-size: 14px;
+    font-weight: 500;
+    color: #333333;
+}
+
+.seperation-line-class {
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 15px;
+    justify-content: space-between;
+}
+
+.seperation-line-class hr {
+    width: 40%;
+    margin: auto;
+    margin-left: 0px;
+    margin-right: 0px;
+    border-top: 1px solid #969696;
+    /* margin-top: 0px; */
+    /* margin-bottom: 0px; */
+}
+
+.sign-with-facebook {
+    width: 100%;
+    background-color: #1976F2 !important;
+    border-color: #1976F2 !important;
+    margin-bottom: 15px;
+    border-radius: 5px !important;
+    font-size: 16px !important;
+    padding: 15px !important;
+    position: relative;
+}
+
+.sign-with-facebook img {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.sign-with-google {
+    width: 100%;
+    background-color: #4285F4 !important;
+    border-color: #4285F4 !important;
+    margin-bottom: 40px;
+    border-radius: 5px !important;
+    font-size: 16px !important;
+    padding: 15px !important;
+    position: relative;
+}
+
+.sign-with-google img {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.close-button-class {
+    background: transparent !important;
+    position: absolute;
+    border: none !important;
+    right: 10px;
+    top: 10px
+}
+
+.close-button-class:hover {
+    box-shadow: none !important;
 }
